# 256695pc2m

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  databazova_polozka.h  datum.h  kategorie.h  main.h  nacitacdat.h  ovladac_pozorovani.h  ovladac_seznamu_pozorovani.h  pozorovani.h  ptak.h  radek.h  spravce_terminalu.h  stringutil.h  ukladac_dat.h  vypisovac.h
src/: CMakeLists.txt  datum.c  main.c  nacitacdat.c  ovladac_pozorovani.c  ovladac_seznamu_pozorovani.c  pozorovani.c  ptak.c  spravce_terminalu.c  stringutil.c  ukladac_dat.c  vypisovac.c
src/tests/: CMakeLists.txt  test_datum_textova_reprezentace.c  test_mazani_radku.c  test_nacteni_pozorovani_cele.c  test_nacteni_pozorovani_hlavicka.c  test_nacteni_pozorovani_hlavicka_prazdne.c  test_vypis_ptaka.c  test_vypis_tabulky.c
